-------------------------------------------------------------------
Thu Dec 16 23:37:56 CET 2010 - Sebastian Siebert <freespacer@gmx.de>

- retrofit the fglrx-kernel-build.sh:
  - fixed an issue with a build failure and exit too early. The successive
    kernels was not builded the fglrx kernel module.
  - improve a summary report of the build and installation of the
    fglrx kernel module to all kernel versions and flavors.
- add a patch for kernel >= 2.6.36 with the issue of the function with
  compat_alloc_user_space(). The make flag "-DCOMPAT_ALLOC_USER_SPACE=..."
  does not work.
- remove obsolete patch: ati-opensuse-11.4.patch

-------------------------------------------------------------------
Mon Dec 13 07:42:31 CET 2010 - Sebastian Siebert <freespacer@gmx.de>

- packaging script and spec file were completely rewritten
- add a verbose mode (1 = what are you doing, 2 = tell me everything)
  Usage:
  # VERBOSE="1" ./ati-driver-installer-(version)-(arch).sh --buildpkg ...
  # VERBOSE="2" ./ati-driver-installer-(version)-(arch).sh --buildpkg ...
- add an auto detection of openSUSE and SLE version and architecture
  Usage:
  # ./ati-driver-installer-(version)-(arch).sh --buildpkg SuSE/SUSE-autodetection
- add a switch to unlock unsupported openSUSE version
  Usage:
  # UNSUPPORTED="yes" ./ati-driver-installer-(version)-(arch).sh --buildpkg ...
- add a rebuild script boot.fglrxrebuild at boot time (init) with a
  logging function to /var/log/fglrx-build.log
- add a renew fglrx-kernel-build.sh with a support to rebuild of all
  available installed kernel flavors and versions
- renew the patches